--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div class="box">
                 <div class="year"> <i class="fas fa-calendar"></i> 2023 - 2025 </div>
                 <h3>Superior de Tecnologia em Análise e Desenvolvimento de Sistemas - P2</h3>
-                <p>Faculdade UNIPÊ.</p>
+                <p>UNIPÊ centro universitário.</p>
             </div>
             <div class="box">
                 <div class="year"> <i class="fas fa-calendar"></i>  </div>
