--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="box">
                     <h3> <span> Experiência: </span> N\A </h3>                 
                     <h3> <span> Idiomas : </span> Português, Inglês Básico </h3>
-                    <h3> <span> Disponibilidade de horário: </span> das 05:00 PM em diante </h3>
+                    <h3> <span> Disponibilidade de horário: </span> vespertino </h3>
                 </div>
 
             </div>
