--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <h3> <span> Telefone: </span> +55(83)9 9949-1618 </h3>
                 </div>
                 <div class="box">
-                    <h3> <span> Experiência: </span> N\A </h3>                 
+                    <h3> <span> Experiência: </span> acadêmica </h3>                 
                     <h3> <span> Idiomas : </span> Português, Inglês Básico </h3>
                     <h3> <span> Disponibilidade de horário: </span> vespertino </h3>
                 </div>
