--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
         </form>
 
         <div class="image">
-         <!--<img src="images/about.jpeg" alt="JúniorEstevão">-->
+        <img src="images/about.jpg" alt="JúniorEstevão">
         </div>
 
     </div>
